appId: com.realtoapp.ios
---
- tapOn: "bottom_tab_profile_icon"
- tapOn: "MY EMPLOYEE"
# - tapOn: "Add New Employee"
- tapOn: "add_employee_icon"
- assertVisible: "Add New Employee"
- assertVisible: "Add employees so they can have access/edit rights for your properties listing, you can any time change any employees rights"
- tapOn: "Employee Name*"
- inputText: "Emp View 1"
- tapOn: "Employee Mobile*"
- inputText: "5555555511"
- tapOn: 'Done'
- waitForAnimationToEnd  
- assertVisible: "View: Enable View will allow employee to see the properties and customers which are assigned to him."
# - tapOn: "manage_employee_add_button"
# comment this is add button is enable
- tapOn: "Go back"

# Assign property to emplyee
- tapOn: "add_property_icon_id_555511"
- assertVisible: "Properties"
- tapOn: "Residential"
- assertVisible: "Search By Name, Address, Id, Mobile"
- assertVisible: "Vertical scroll bar, 1 page 󰅁 󰅂 match_526830 Sell Off In RSP1 Building 1, RSP1 Landmark 1 Juhu Beach, Maharashtra, India Reference id: 526830 employee_526830 emp_checkbox_526830 2BHK 2.5 Cr Price 500 Builtup Semi Furnishing"
- tapOn: "emp_checkbox_526830"
- tapOn: "Go back"
- assertVisible: "count_property_555511_1"

- tapOn: "add_property_icon_id_555511"
- assertVisible: "Properties"
- tapOn: "Commercial"
- assertVisible: "Search By Name, Address, Id, Mobile"
- assertVisible: "Vertical scroll bar, 1 page 󰅁 󰅂 match_909779 Sell Off in CSP1 Building 1, CSP1 Landmark 1 Juhu Beach, Maharashtra, India Reference id: 909779 employee_909779 emp_checkbox_909779 Shop Prop Type 3 Cr Price Mall Building Type 800 sqft Builtup"
- tapOn: "emp_checkbox_909779"
- tapOn: "Go back"
- assertVisible: "count_property_555511_2"

# Assign customer to emplyee
- tapOn: "add_customer_icon_id_555511"
- assertVisible: "Customers"
- tapOn: "RESIDENTIAL CUSTOMER"
- assertVisible: "Search By Name, Address, Id, Mobile"
- assertVisible: ".*match_678800 Customer Rent Residential 1.*"
- tapOn: "emp_checkbox_678800"
- tapOn: "Employee, back"
- assertVisible: "count_customer_555511_1"

- tapOn: "add_customer_icon_id_555511"
- assertVisible: "Customers"
- tapOn: "Commercial"
- assertVisible: "Search By Name, Address, Id, Mobile"
- assertVisible: ".*match_066539 Customer Buy Commercial 1.*"
- tapOn: "emp_checkbox_066539"
- tapOn: "Employee, back"
- assertVisible: "count_customer_555511_2"