appId: com.realtoapp.ios
---
- tapOn: "bottom_tab_contacts_icon"
- tapOn: "Commercial"
- tapOn:
    id: "match_idx_520167"
- assertVisible: "Matched Properties"
- tapOn: "My Properties"
- assertVisible:
    text: ".*Rent In CRP1 Building 1.*"
- assertVisible: ".*Juhu Beach, Maharashtra.*"
- assertVisible: "Reference id: 056863"
- assertVisible: ".*85%.*"
- assertVisible: ".*Match.*"
- assertVisible: ".*Shop.*"
- assertVisible: ".*30 K.*"
- assertVisible: ".*Rent.*"
- assertVisible: ".*1.5 Lac.*"
- assertVisible: ".*Deposit.*"
- assertVisible: ".*500.*"
- assertVisible: ".*Builtup.*"

- tapOn: "Other's Properties"
- assertVisible: ".*Rent In , CRP2 Landmark 2.*"
- assertVisible: ".*Juhu Beach, Maharashtra, India.*"
- assertVisible: "Reference id: 186849"
- assertVisible: ".*85%.*"
- assertVisible: ".*Match.*"
- assertVisible: ".*Shop.*"
- assertVisible: ".*30 K.*"
- assertVisible: ".*Rent.*"
- assertVisible: ".*1.5 Lac.*"
- assertVisible: ".*Deposit.*"
- assertVisible: ".*500.*"
- assertVisible: ".*Builtup.*"
- tapOn: "Go back"



- tapOn:
    id: "match_idx_066539"
- tapOn: "My Properties"
- assertVisible: ".*Sell Off In CSP1 Building 1, CSP1 Landmark 1.*"
- assertVisible: ".*Juhu Beach, Maharashtra, India.*"
- assertVisible: "Reference id: 909779"
- assertVisible: ".*75%.*"
- assertVisible: ".*Match.*"
- assertVisible: ".*Shop.*"
- assertVisible: ".*3.*"
- assertVisible: ".*Price.*"
- assertVisible: ".*800.*"
- assertVisible: ".*Builtup.*"
- assertVisible: ".*Mall.*"
- assertVisible: ".*Building Type.*"

- tapOn: "Other's Properties"
- assertVisible: ".*Sell Off In , CSP2 Landmark 2.*"
- assertVisible: ".*Juhu Beach, Maharashtra, India.*"
- assertVisible: "Reference id: 329604"
- assertVisible: ".*75%.*"
- assertVisible: ".*Match.*"
- assertVisible: ".*Shop.*"
- assertVisible: ".*3.*"
- assertVisible: ".*Price.*"
- assertVisible: ".*800.*"
- assertVisible: ".*Builtup.*"
- assertVisible: ".*Mall.*"
- assertVisible: ".*Building Type.*"
- tapOn: "Go back"