appId: com.realtoapp.ios
---
- tapOn: "bottom_tab_properties_icon"
- assertVisible: "Residential"
- tapOn: "Commercial"
- assertVisible: "Commercial"
- tapOn:
    id: "match_id_909779"
- tapOn: "My Customer"
- assertVisible:
    text: ".*Customer Buy Commercial 1.*"
- assertVisible:
    text: ".*9933088888.*"
- assertVisible:
    id: "ref_id_066539"
- assertVisible: ".*75%.*"
- assertVisible: ".*Match.*"
- assertVisible: " No Employees Assigned"
- tapOn: "Other's Customer"
- assertVisible:
    text: ".*Agent.*"
- assertVisible:
    text: ".*9000000002.*"
- assertVisible:
    id: "ref_id_319044"
- assertVisible: ".*75%.*"
- assertVisible: ".*Match.*"


- tapOn: "Go back"
- tapOn:
    id: "match_id_056863"
    optional: true
- tapOn: "My Customer"
- assertVisible:
    text: ".*Customer Rent Commercial 1.*"
- assertVisible:
    text: ".*9933057777.*"
- assertVisible:
    id: "ref_id_520167"
- assertVisible: ".*85%.*"
- assertVisible: ".*Match.*"
- assertVisible: " No Employees Assigned"
- tapOn: "Other's Customer"
- assertVisible:
   text: ".*Agent.*"
- assertVisible:
    text: ".*9000000002.*"
- assertVisible:
    id: "ref_id_804551"
- assertVisible: ".*85%.*"
- assertVisible: ".*Match.*"
- tapOn: "Go back"