appId: com.realtoapp.ios
---
- tapOn: "bottom_tab_contacts_icon"
- tapOn: "RESIDENTIAL"
- tapOn: "match_678800"
- assertVisible: "Matched Properties"
- tapOn: "My Properties"
- assertVisible:
    text: ".*Rent In RRP1 Building 1.*"
- assertVisible: ".*Juhu Beach, Maharashtra.*"
- assertVisible: "Reference id: 968284"
- assertVisible: ".*84%.*"
- assertVisible: ".*Match.*"
- assertVisible: ".*2BHK.*"
- assertVisible: ".*30 K.*"
- assertVisible: ".*Rent.*"
- assertVisible: ".*1.5 Lac.*"
- assertVisible: ".*Deposit.*"
- assertVisible: ".*Semi.*"
- assertVisible: ".*Furnishing.*"

- tapOn: "Other's Properties"
- assertVisible: ".*Rent In , RRP2 Landmark 2.*"
- assertVisible: ".*Juhu Beach, Maharashtra, India.*"
- assertVisible: "Reference id: 141198"
- assertVisible: ".*84%.*"
- assertVisible: ".*Match.*"
- assertVisible: ".*2BHK.*"
- assertVisible: ".*30 K.*"
- assertVisible: ".*Rent.*"
- assertVisible: ".*1.5 Lac.*"
- assertVisible: ".*Deposit.*"
- assertVisible: ".*Semi.*"
- assertVisible: ".*Furnishing.*"
- tapOn: "Go back"


- tapOn: "match_568630"
- tapOn: "My Properties"
- assertVisible: ".*Sell Off In RSP1 Building 1, RSP1 Landmark 1.*"
- assertVisible: ".*Juhu Beach, Maharashtra, India.*"
- assertVisible: "Reference id: 526830"
- assertVisible: ".*66%.*"
- assertVisible: ".*Match.*"
- assertVisible: ".*2BHK.*"
- assertVisible: ".*2.5.*"
- assertVisible: ".*Price.*"
- assertVisible: ".*500.*"
- assertVisible: ".*Builtup.*"
- assertVisible: ".*Semi.*"
- assertVisible: ".*Furnishing.*"

- tapOn: "Other's Properties"
- assertVisible: ".*Sell Off In , RSP2 Landmark 2.*"
- assertVisible: ".*Juhu Beach, Maharashtra, India.*"
- assertVisible: "Reference id: 581147"
- assertVisible: ".*66%.*"
- assertVisible: ".*Match.*"
- assertVisible: ".*2BHK.*"
- assertVisible: ".*2.5.*"
- assertVisible: ".*Price.*"
- assertVisible: ".*500.*"
- assertVisible: ".*Builtup.*"
- assertVisible: ".*Semi.*"
- assertVisible: ".*Furnishing.*"
- tapOn: "Go back"