appId: com.realtoapp.ios
---
- tapOn: "bottom_tab_contacts_icon"
- assertVisible: "Residential"
- tapOn: "Residential"
- assertVisible: "Search By Name, Address, Id, Mobile"
- assertVisible: "match_568630 Customer Buy Residential 1 󱕙 +91 9933066666 Reference id: 568630 animated_568630  Juhu Beach  No Employees Assigned 2BHK 3 Cr Buy Semi Furnishing C"
- assertVisible: ".*Customer Buy Residential 1.*"
- assertVisible: ".*Juhu Beach.*"
- assertVisible: ".*Reference id: 568630.*"
- scrollUntilVisible:
    element:
      id: "end_of_list"
    direction: down
    visibilityPercentage: 100
    timeout: 10000
- assertVisible: ".*Rent.*"
- assertVisible: ".*Deposit.*"
- assertVisible: ".*Furnishing.*"
- assertVisible: ".*match_568630.*"
- tapOn:
    id: "chevron_left_icon_id_568630"
- tapOn:
    id: "alarm_outline_icon_id_568630"
- assertVisible: "Reminders"
- assertVisible: "Create a call/visiting schedule to show property to client and get reminder on time"
- assertVisible: "Reminder For ?"
- tapOn: "reminder_type_call"
- tapOn: " Add Residential Properties For Buy"
- assertVisible: "Property List"
- assertVisible: "Search by property address, owner"
- assertVisible: "Vertical scroll bar, 1 page 󰅁 󰅂 66% Match Sell Off In RSP1 Building 1, RSP1 Landmark 1 Juhu Beach, Maharashtra, India Reference id: 526830 employee_526830 checkbox_526830 2BHK 2.5 Cr Price 500 Builtup Semi Furnishing"
- tapOn:
    id: "checkbox_id_526830"
- tapOn: "Reminders, back"
- tapOn: "Date*"
- tapOn: " 28 "
- tapOn: "OK"
- tapOn: "Time*"
- tapOn: "Hour"
- inputText: "11"
- tapOn: "Minute"
- inputText: "30"
- tapOn: "AM"
- tapOn: "Apply"
- assertVisible: "11:30 AM"
# - tapOn: "Save"
- assertVisible: "Upcoming Meetings"
- assertVisible: "Past Meetings"
- scrollUntilVisible:
    element:
      id: "end_of_list"
    direction: down
    visibilityPercentage: 100
    timeout: 10000
- tapOn: "Customer Buy

    Residential 1 +91 9933066666 Call 11:30 AM Sun Sep 28 2025"
- assertVisible: "Meeting Details"
- assertVisible: "Customer Buy Residential 1"
- assertVisible: "Reference id: 568630"
- assertVisible: "Vertical scroll bar, 2 pages 󰅁 󰅂 66% Match Sell Off In RSP1 Building 1, RSP1 Landmark 1 Juhu Beach, Maharashtra, India Reference id: 526830 employee_526830 2BHK 2.5 Cr Price 500 Builtup Semi Furnishing"
- tapOn: "Go back"