# Parameterized template for residential rent property test cases
appId: com.realtoapp.ios
---
- tapOn: "bottom_tab_properties_icon"
- assertVisible: "Residential"
- tapOn: "add_property_icon"
- tapOn: "property_type_residential"
- tapOn: "property_for_rent"
- assertVisible: "Owner Details"
- tapOn: "Name*"
- inputText: "RRP1"
- hideKeyboard
- waitForAnimationToEnd  
- tapOn:
    text: return
    optional: true 
- tapOn: "Mobile*"
- inputText: "9833011111"
- hideKeyboard  
- waitForAnimationToEnd  
- tapOn: "Done"
- tapOn: "Address*"
- inputText: "juhu mumbai"
- hideKeyboard  
- waitForAnimationToEnd
- tapOn:
    text: return
    optional: true
- tapOn: 
    text: Done
    optional: true  
- tapOn: "NEXT"

- assertVisible: "Locality Details"
- tapOn: "City*"
- inputText: "Mumbai"
- tapOn:
    text: return
    optional: true 
- tapOn: "Add multiple locations within city"
- inputText: "Juhu"
- tapOn:
    text: return
    optional: true 
- tapOn: "Juhu Beach, Maharashtra"
- tapOn: "Flat No and Wing*"
- inputText: "RRP1 F1 Wing 1"
- tapOn:
    text: return
    optional: true 
- tapOn: "Building Name / Society*"
- inputText: "RRP1 Building 1"
- tapOn:
    text: return
    optional: true 
- tapOn: "Street / Landmark*"
- inputText: "RRP1 Landmark 1"
- tapOn:
    text: return
    optional: true 
- tapOn: "NEXT"

- assertVisible: "House Type*"
- tapOn: "house_type_apartment"
- assertVisible: "Size of BHK*"
- tapOn: "bhk_type_2bhk"
- tapOn: "washroom_number_2"
- assertVisible: "Furnishing*"
- tapOn: "furnishing_status_semi"
- assertVisible: "Parkings*"
- tapOn: "parking_number_2"
- tapOn: "parking_type_car"
- assertVisible: "Property Age*"
- tapOn: "property_age_6-10"
- scrollUntilVisible:
    element:
      text: "NEXT"
    direction: down
- tapOn: "Floor"
- inputText: "20"
- hideKeyboard  
- waitForAnimationToEnd  
- tapOn: "Done"
- tapOn: "Total Floor"
- inputText: "25"
- hideKeyboard  
- waitForAnimationToEnd  
- tapOn: "Done"
- scrollUntilVisible:
    element:
      text: "NEXT"
    direction: down
- tapOn: "Floor"
- assertVisible: "Lift*"
- tapOn: "lift_available_yes"
- tapOn: "Property Size"
- inputText: "500"
- hideKeyboard  
- waitForAnimationToEnd  
- tapOn: "Done"
- scrollUntilVisible:
    element:
      text: "NEXT"
    direction: down
- tapOn: "NEXT"

- assertVisible: "Rent Details"
- tapOn: "Expected Rent"
- inputText: "30000"
- tapOn: "Done"
- tapOn: "Expected Deposit"
- inputText: "150000"
- tapOn: "Done"
- tapOn: "Available From *"
- tapOn: " 30 "
- tapOn: "OK"
- tapOn: "NEXT"

- assertVisible: "Add Images"
- assertVisible: "ADD PHOTOS"
- tapOn: "ADD PHOTOS"
- tapOn: "Photo, 31 March 2018, 12:44 AM"
- waitForAnimationToEnd  
- tapOn: "NEXT"

- waitForAnimationToEnd  
- assertVisible: "Final Details"
- takeScreenshot: "final_details_residential_rent_property_1"
- assertVisible: ".*RRP1 F1 Wing 1.*"
- assertVisible: ".*RRP1 Landmark 1.*"
- assertVisible: "Details"
- assertVisible: "20/25"
- assertVisible: "6-10"
- assertVisible: "Semi"
- assertVisible: "Owner"

- scrollUntilVisible:
    element:
      text: "ADD"
    direction: down
- tapOn: "ADD"

- waitForAnimationToEnd
- tapOn: "Residential"
- waitForAnimationToEnd
# - assertVisible: ".*${final_details_property_title}.*"